--- a/dist.ini
+++ b/dist.ini
@@ -4,6 +4,27 @@ license = Perl_5
 copyright_holder = Brad Clawsie
 copyright_year   = 2021
 
-version = 0.001
+[RewriteVersion]
 
-[@Basic]
+[GatherDir]
+prune_directory = experimental
+exclude_filename = Dockerfile
+exclude_filename = Makefile
+exclude_filename = README.md
+exclude_filename = LICENSE
+exclude_filename = .perlcritic
+exclude_filename = .github
+
+[Prereqs]
+perl = 5.34.0
+Carp = 0
+Readonly = 0
+strictures = 0
+
+[Prereqs / DevelopRequires]
+Test2::V0 = 0
+Test2::Tools::Exception = 0
+
+[@Filter]
+-bundle = @Basic
+-remove = GatherDir
