core modules in dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -16,10 +16,10 @@ exclude_filename = .perlcritic
 exclude_filename = .github
 
 [Prereqs]
-perl = 5.34.0
+perl = 5.20.0
 Carp = 0
-Readonly = 0
-strictures = 0
+English = 0
+Path::Tiny = 0
 
 [Prereqs / DevelopRequires]
 Test2::V0 = 0
