--- a/dist.ini
+++ b/dist.ini
@@ -19,11 +19,13 @@ exclude_filename = .github
 perl = 5.20.0
 Carp = 0
 English = 0
+Exporter = 0
 Path::Tiny = 0
 
 [Prereqs / DevelopRequires]
 Test2::V0 = 0
 Test2::Tools::Exception = 0
+File::Spec = 0
 
 [@Filter]
 -bundle = @Basic
